--- a/TO_DO_LIST.Rmd
+++ b/TO_DO_LIST.Rmd
@@ -25,21 +25,23 @@ editor_options:
 * In examples in function query_macaulay() explain how using argument "dates" work. Show how suwo:::.date_ranges() works ✓
 * Make sure all_data = TRUE returns the same info for all functions, or at least homologous columns have the same name ✓
 * check @return info so it matches the structure of the output data when all.data = TRUE and when all.data = FALSE (maybe do not list all the columns when all_data = TRUE) 
-* why do we need to tell users what is the species code in query_macaulay()?
-* make sure mention in vignette whether lat lon are returned by each function
-* Add maximum number of observations per repo to vignette table 
-* convert all dates so they are "dates" in R and with the same format 
+* why do we need to tell users what is the species code in query_macaulay()? ✓
+* make sure mention in vignette whether lat lon are returned by each function ✓
+* Add maximum number of observations per repo to vignette table ✓
+* convert all dates so they are "dates" in R and with the same format ✓
 * How to add the country to iNaturalist output? 
-* have not checked check_duplicates()
-* check_duplicates() should suggest duplicates in data from repos that share with GBIF (this call from GBIF returns xeno-canto media. Use it as an example for removing duplicates query_gbif(term = 'Glaucis dohrnii', type = "sound", all_data = TRUE))
+* have not checked check_duplicates()✓
+* check_duplicates() should suggest duplicates in data from repos that share with GBIF (this call from GBIF returns xeno-canto media. Use it as an example for removing duplicates query_gbif(term = 'Glaucis dohrnii', type = "sound", all_data = TRUE))✓
 * do we need sys.sleep(1) in query_wikiaves() (and other functions)?
-* make taxon_code_search() internal
-* consolidate all internet access-checking functions into a single internal function
+* make taxon_code_search() internal✓
+* consolidate all internet access-checking functions into a single internal function✓
 * consider removing cores argument from query_wikiaves() as the server does not seem to like parallel queries
-* make sure vignette works with new changes
-* check that all functions have examples
+* make sure vignette works with new changes ✓
+* check that all functions have examples 
 * check that all functions have references to original data sources
 * check that all functions have @return info
 * query_observation() search does not seem to include format
 * make "verbose" and "pb" independent
 * Make sure parallel computing works in Windows (why do we have "cl.cores" in parallel::makePSOCKcluster(getOption("cl.cores", cores))?)
+* add informative message about whether there are duplicates when using find_duplicates()
+* add informative message about how many duplicates were removed and how many records remained to remove_duplicates()
