--- a/vignettes/suwo.Rmd
+++ b/vignettes/suwo.Rmd
@@ -314,14 +314,14 @@ query_summary[,c("Function", "Additional data")] |>
 
 ```
 
-`query_macaulay()` is the only interactive function. When users run a query the function opens a browser window to the Macaulay Library's search page, where the user must download a .csv file with the metadata:
+`query_macaulay()` is the only interactive function. When users run a query the function opens a browser window to the Macaulay Library's search page, where the users must download a .csv file with the metadata:
 
 ```{r, eval = FALSE}
 # Query Wikiaves for Turdus rufiventris sounds
 truf_ml <- query_macaulay(term = "Turdus rufiventris", format = "sound")
 ```
 
-User must click on the "Export" button to save the .csv file with the metadata. The file must be saved in the directory specified by the `path` argument of the function (default is the current working directory). The function will not proceed until the file is saved.
+Users must click on the "Export" button to save the .csv file with the metadata. The file must be saved in the directory specified by the `path` argument of the function (default is the current working directory). The function will not proceed until the file is saved.
 
 <center><img src="ml_browser.jpeg" alt="suwo workflow diagram" width="100%"></center>
 
@@ -350,7 +350,7 @@ By default the package standardizes the information in the basic fields (detaile
 
 The `update_metadata()` function allows users to update a previous query to add new information from the corresponding repository of the original search. This function takes as input a data frame previously obtained from any query function (i.e. `query_reponame()`) and returns a data frame similar to the input with new data appended. 
 
-To show case the function, we will use the previous example of _Turdus rufiventris_ sounds from Xeno-canto. Let's assume that the initial query was done a while ago and we want to update it to include any new records that might have been added since then. So i will remove all observations recorded after 2024-12-31 to simulate an old query:
+To show case the function, we will use the metadata from the previous example of _Turdus rufiventris_ sounds from Xeno-canto. Let's assume that the initial query was done a while ago and we want to update it to include any new records that might have been added since then. The following code removes all observations recorded after 2024-12-31 to simulate an old query:
 
 
 ```{r}
@@ -365,11 +365,11 @@ nrow(truf_xc) == nrow(updated_xc)
   
 ```
 
-Note the use of the suwo function `subset_metadata()` to filter the data frame by date. This functions make sure that the attributes of the data frame are preserved, which are needed by subsequent suwo functions working on metadata. Those attributes will be lost if you use `dplyr::filter()`, `base::subset()` or the extract operator `[` (e.g. `metadata[1:3, ]`).
+Note the use of the suwo function `subset_metadata()` to filter the data frame by date. This is a modified version of `base::subset()` that makes sure that the attributes of the data frame are preserved, which are needed by subsequent suwo functions working on metadata. Those attributes will be lost if you use `dplyr::filter()`, `base::subset()` or the extract operator `[` (e.g. `metadata[1:3, ]`).
 
 # Combine metadata from multiple repositories
 
-The `merge_metadata()` function allows users to combine metadata data frames obtained from multiple query functions into a single data frame. This function ensures that the combined data frame has a consistent structure, with all basic metadata fields included. The function will match the basic columns of all data frames. Data from additional columns will only be combined if the names from the different repositories match. The function will return a data frame that includes a new column called `source` indicating the name of the original metadata data frame: 
+The `merge_metadata()` function allows users to combine metadata data frames obtained from multiple query functions into a single data frame. The function will match the basic columns of all data frames. Data from additional columns (for instance when using 'all_data = TRUE' in the query) will only be combined if the column names from different repositories match. The function will return a data frame that includes a new column called `source` indicating the name of the original metadata data frame: 
 
 ```{r, eval = FALSE}
 
@@ -437,7 +437,7 @@ When duplicates are found, one observation from each group of duplicates is reta
 
 # Donwload media files
 
-The last step of the workflow is to download the media files associated with the metadata. This can be done using the `download_media()` function, which takes as input a metadata data frame (obtained from any query function or merged data frame) and downloads the media files to a specified directory. For this example we will download images from a query on `Amanita zambiana` (a mushroom) on GBIF:
+The last step of the workflow is to download the media files associated with the metadata. This can be done using the `download_media()` function, which takes as input a metadata data frame (obtained from any query function or any of the other metadata managing functions) and downloads the media files to a specified directory. For this example we will download images from a query on `Amanita zambiana` (a mushroom) on GBIF:
 
 ```{r, eval = FALSE}
 # query GBIF for Amanita zambiana images
@@ -460,7 +460,7 @@ amus_files <- download_media(metadata = amus_gbf, path = tempdir())
 
 ```
 
-The output of the function is a data frame similar to the input metadata but with two additional columns indicating the file name of the downloaded files ('download_file_name') and the result of the download attempt ('download_result', with values "success", 'failed', 'already there (not downloaded)' or 'overwritten').
+The output of the function is a data frame similar to the input metadata but with two additional columns indicating the file name of the downloaded files ('download_file_name') and the result of the download attempt ('download_status', with values "success", 'failed', 'already there (not downloaded)' or 'overwritten').
 
 Here we print the first 3 rows of the output data frame:
 
@@ -497,14 +497,14 @@ Users can also save the downloaded files into sub-directories with the argument 
 ```{r}
 
 # download media files to a temporary directory, creating sub-directories by country
-amus_files2 <- download_media(metadata = amus_gbf, path = tempdir(), folder_by = "country")
+amus_files <- download_media(metadata = amus_gbf, path = tempdir(), folder_by = "country")
 
 ```
 
 In such case the name of the downloaded files will include the sub-directory name:
 ```{r}
 
-amus_files2$download_file_name
+amus_files$download_file_name
 
 ```
 
