update workflow image

--- a/vignettes/suwo.Rmd
+++ b/vignettes/suwo.Rmd
@@ -133,7 +133,7 @@ Here is a description of each step:
  
 1. Download the media files associated with the metadata using the `download_media()` function. 
 
-1. Finally, users can update their datasets with new records by re-running the queries and merging the new results with their existing datasets using the `update_metadata()` function. 
+1. Users can update their datasets with new records using the `update_metadata()` function. 
 
 
 # Query functions
@@ -541,7 +541,7 @@ for (i in 1:6) {
 
 ```
 
-Users can also save the downloaded files into sub-directories with the argument `folder_by`. The argument `folder_by` takes a character of factor column with the names of two or more metadata fields to create sub-directories within the main download directory (suplied with the argument `path`). For instance, the following code saves the previous images into sub-directories by country:
+Users can also save the downloaded files into sub-directories with the argument `folder_by`. This argument takes a character of factor column with the names of a metadata field (a column in the metadata data frame) to create sub-directories within the main download directory (suplied with the argument `path`). For instance, the following code saves the previous images into sub-directories by country:
 
 ```{r}
 
