update terms of usage

--- a/README.Rmd
+++ b/README.Rmd
@@ -36,7 +36,7 @@ The main features of the package are:
 - Updating data sets with new records
 
 
-**THE PACKAGE IS ON AN EARLY DEVELOPMENTAL STAGE AND WILL BE MODIFIED FREQUENTLY.**
+:warning:**THE PACKAGE IS ON AN EARLY DEVELOPMENTAL STAGE AND WILL BE MODIFIED FREQUENTLY.**:warning:
 
 We are currently searching for new online repositories to be included in the package.
 Please [open a new
@@ -65,8 +65,14 @@ remotes::install_github("maRce10/suwo")
 library(suwo)
 ```
 
+
+## Intended use and responsible practices
+
+The [suwo](https://github.com/maRce10/suwo) package package is designed exclusively for non-commercial, scientific purposes, including research, education, and conservation. **Any commercial use of the data or media retrieved through this package is strictly prohibited** unless explicit, separate permission is granted directly from the original source platforms and content creators. Users are obligated to comply with the specific terms of service and data use policies of each source database, which often mandate attribution and similarly restrict commercial application. The package developers assume no liability for misuse of the retrieved data or violations of third-party terms of service.
+
+## Citation
+
 Please cite [suwo](https://github.com/maRce10/suwo) as follows:
 
 Araya-Salas, M., & Elizondo-Calvo, J. 2023. suwo: access nature media
 repositories through R. R package version 0.1.0.
-
