--- a/vignettes/suwo.Rmd
+++ b/vignettes/suwo.Rmd
@@ -85,13 +85,13 @@ options(width = 100, max.print = 100)
 
 #### Intended use and responsible practices {.unnumbered .unlisted}
 
-The suwo package package is designed exclusively for non-commercial, scientific purposes, including research, education, and conservation. Any **commercial use of the data or media retrieved through this package is strictly prohibited** unless explicit, separate permission is granted directly from the original source platforms and content creators. Users are obligated to comply with the specific terms of service and data use policies of each source database, which often mandate attribution and similarly restrict commercial application. The package developers assume no liability for misuse of the retrieved data or violations of third-party terms of service.
+The [suwo](https://github.com/maRce10/suwo) package is designed exclusively for non-commercial, scientific purposes, including research, education, and conservation. Any **commercial use of the data or media retrieved through this package is strictly prohibited** unless explicit, separate permission is granted directly from the original source platforms and content creators. Users are obligated to comply with the specific terms of service and data use policies of each source database, which often mandate attribution and similarly restrict commercial application. The package developers assume no liability for misuse of the retrieved data or violations of third-party terms of service.
 
 :::
 
 ::: {.alert .alert-info}
 
-The suwo package is designed to simplify the retrieval of nature media (mostly photos, audio files and videos) across multiple online biodiversity databases. This vignette provides an overview of the package’s core querying functions, the searching and downloading of media files, and the compilation of metadata from various sources. For detailed information on each function, please refer to the [function reference](https://maRce10.github.io/suwo/reference/index.html) or use the help files within R (e.g., `?query_gbif`).
+The [suwo](https://github.com/maRce10/suwo) package is designed to simplify the retrieval of nature media (mostly photos, audio files and videos) across multiple online biodiversity databases. This vignette provides an overview of the package’s core querying functions, the searching and downloading of media files, and the compilation of metadata from various sources. For detailed information on each function, please refer to the [function reference](https://maRce10.github.io/suwo/reference/index.html) or use the help files within R (e.g., `?query_gbif`).
 
 :::
 
@@ -126,7 +126,7 @@ library(suwo)
 
 # Basic workflow for obtaining nature media files
 
-Finding data using suwo follows a basic sequence. The following diagram illustrates this workflow and the main functions involved:
+Finding data using [suwo](https://github.com/maRce10/suwo) follows a basic sequence. The following diagram illustrates this workflow and the main functions involved:
 
 <center><img src="workflow_diagram.png" alt="suwo workflow diagram" width="100%"></center>
 
@@ -135,18 +135,18 @@ Here is a description of each step:
 
 1. Queries regarding a specific taxonomic group (typically a species name) is submitted through one of the available query functions (`query_repo_name()`) that connect to five different online repositories. The output of these queries is a data frame containing metadata associated with the media files (e.g., species name, date, location, etc, see below). 
 
-1. If multiple repositories are queried, the resulting metadata data frames can be merged into a single data frame using the `merge_metadata()` function. 
+1. If multiple repositories are queried, the resulting metadata data frames can be merged into a single data frame using the [merge_metadata()](https://marce10.github.io/suwo/reference/merge_metadata.html) function. 
 
-1. Check for duplicate records in their datasets using the `find_duplicates()` function. Candidate duplicated entries are identified based on matching species name, country, date, user name, and geographic coordinates. User can double check the candidate duplicates and decide which records to keep, which can be done with `remove_duplicates()`.
+1. Check for duplicate records in their datasets using the [find_duplicates()](https://marce10.github.io/suwo/reference/find_duplicates.html) function. Candidate duplicated entries are identified based on matching species name, country, date, user name, and geographic coordinates. User can double check the candidate duplicates and decide which records to keep, which can be done with [remove_duplicates()](https://marce10.github.io/suwo/reference/remove_duplicates.html).
  
-1. Download the media files associated with the metadata using the `download_media()` function. 
+1. Download the media files associated with the metadata using the [download_media()](https://marce10.github.io/suwo/reference/download_media.html) function. 
 
-1. Users can update their datasets with new records using the `update_metadata()` function. 
+1. Users can update their datasets with new records using the [update_metadata()](https://marce10.github.io/suwo/reference/update_metadata.html) function. 
 
 
 # Query functions
 
-The following table summarizes the available suwo query functions and the types of metadata they retrieve:
+The following table summarizes the available [suwo](https://github.com/maRce10/suwo) query functions and the types of metadata they retrieve:
 
 ```{r, echo=TRUE}
 # Load suwo package
@@ -344,9 +344,17 @@ query_summary[, c("Function", "Additional data")] |>
 
 ```
 
+<div class="alert alert-warning">
+
+<font size = "4">Obtaining raw data</font>
+
+By default the package standardizes the information in the basic fields (detailed above) in order to facilitate the compilation of metadata from multiple repositories. However, in some cases this may result in loss of information. For instance, some repositories allow users to provide "morning" as a valid time value, which are converted into NAs by [suwo](https://github.com/maRce10/suwo). In such cases, users can retrieve the original data by setting the `raw_data = TRUE` in the query functions and/or global options (`options(raw_data = TRUE)`). Note that subsequent data manipulation functions (e.g., [merge_metadata()](https://marce10.github.io/suwo/reference/merge_metadata.html), [find_duplicates()](https://marce10.github.io/suwo/reference/find_duplicates.html), etc) will not work properly as the basic fields are not standardized.
+
+</div>
+
 ## Query Macaulay Library interactively
 
-`query_macaulay()` is the only interactive function. This means that when users run a query the function opens a browser window to the Macaulay Library's search page, where the users must download a .csv file with the metadata:
+[query_macaulay()](https://marce10.github.io/suwo/reference/query_macaulay.html) is the only interactive function. This means that when users run a query the function opens a browser window to the [Macaulay Library's search page](https://search.macaulaylibrary.org/catalog), where the users must download a .csv file with the metadata:
 
 ```{r, eval = FALSE}
 # Query Wikiaves for Turdus rufiventris sounds
@@ -357,8 +365,10 @@ Users must click on the "Export" button to save the .csv file with the metadata:
 
 <center><img src="ml_browser.jpeg" alt="suwo workflow diagram" width="100%"></center>
 
-The file must be saved in the directory specified by the `path` argument of the function (default is the current working directory). The function will not proceed until the file is saved. Here are some additional instructions for using this function properly:
+Here are some instructions for using this function properly:
 
+* The file must be saved in the directory specified by the `path` argument of the function (default is the current working directory)
+* The function will not proceed until the file is saved 
 * If the file is saved overwriting a pre-existing file (i.e. same file name) the function will not detect it
 * The query term must be a species name
 * Users must log in to the Macaulay Library/eBird account in order to access large batches of observations
@@ -390,26 +400,16 @@ Users can check at the Macaulay Library website how many records are available f
 
 <center><img src="ml_num_recs.jpeg" alt="Checking number of records at Macaulay Library" width="100%"></center>
 
-
-<div class="alert alert-warning">
-
-<font size = "4">Obtaining raw data</font>
-
-By default the package standardizes the information in the basic fields (detailed above) in order to facilitate the compilation of metadata from multiple repositories. However, in some cases this may result in loss of information. For instance, some repositories allow users to provide "morning" as a valid time value, which are converted into NAs by suwo. In such cases, users can retrieve the original data by setting the `raw_data = TRUE` in the query functions and/or global options (`options(raw_data = TRUE)`). Note that subsequent data manipulation functions (e.g., `merge_metadata()`, `find_duplicates()`, etc) will not work properly as the basic fields are not standardized.
-
-</div>
-
 # Update metadata
 
-The `update_metadata()` function allows users to update a previous query to add new information from the corresponding repository of the original search. This function takes as input a data frame previously obtained from any query function (i.e. `query_reponame()`) and returns a data frame similar to the input with new data appended. 
+The [update_metadata()](https://marce10.github.io/suwo/reference/update_metadata.html) function allows users to update a previous query to add new information from the corresponding repository of the original search. This function takes as input a data frame previously obtained from any query function (i.e. `query_reponame()`) and returns a data frame similar to the input with new data appended. 
 
 To show case the function, we will use the metadata from the previous example of _Turdus rufiventris_ sounds from Xeno-canto. Let's assume that the initial query was done a while ago and we want to update it to include any new records that might have been added since then. The following code removes all observations recorded after 2024-12-31 to simulate an old query:
 
 
 ```{r}
 # exclude new observations (simulate old data)
-old_truf_xc <- subset_metadata(truf_xc, date <= "2024-12-31" |
-                                 is.na(date))
+old_truf_xc <- subset_metadata(truf_xc, subset = date <= "2024-12-31" | is.na(date))
 
 # update "old" data
 updated_xc <- update_metadata(metadata = old_truf_xc)
@@ -419,11 +419,11 @@ nrow(truf_xc) == nrow(updated_xc)
 
 ```
 
-Note the use of the suwo function `subset_metadata()` to filter the data frame by date. This is a modified version of `base::subset()` that makes sure that the attributes of the data frame are preserved, which are needed by subsequent suwo functions working on metadata. Those attributes will be lost if you use `dplyr::filter()`, `base::subset()` or the extract operator `[` (e.g. `metadata[1:3, ]`).
+Note the use of the [suwo](https://github.com/maRce10/suwo) function [subset_metadata()](https://marce10.github.io/suwo/reference/subset_metadata.html) to filter the data frame by date. This is a modified version of `base::subset()` that makes sure that the attributes of the data frame are preserved, which are needed by subsequent [suwo](https://github.com/maRce10/suwo) functions working on metadata. Those attributes will be lost if you use `dplyr::filter()`, `base::subset()` or the extract operator `[` (e.g. `metadata[1:3, ]`).
 
 # Combine metadata from multiple repositories
 
-The `merge_metadata()` function allows users to combine metadata data frames obtained from multiple query functions into a single data frame. The function will match the basic columns of all data frames. Data from additional columns (for instance when using 'all_data = TRUE' in the query) will only be combined if the column names from different repositories match. The function will return a data frame that includes a new column called `source` indicating the name of the original metadata data frame: 
+The [merge_metadata()](https://marce10.github.io/suwo/reference/merge_metadata.html) function allows users to combine metadata data frames obtained from multiple query functions into a single data frame. The function will match the basic columns of all data frames. Data from additional columns (for instance when using `all_data = TRUE` in the query) will only be combined if the column names from different repositories match. The function will return a data frame that includes a new column called `source` indicating the name of the original metadata data frame: 
 
 ```{r, eval = FALSE}
 
@@ -450,9 +450,9 @@ head(merged_metadata, 4)
 
 # Find and remove duplicated records
 
-When compiling data from multiple repositories, duplicated media records are a common issue. These duplicates occur both through data sharing between repositories like Xeno-Canto and GBIF, and when users upload the same file to multiple platforms. To help users efficiently identify these duplicate records, suwo provides the find_duplicates() function.
+When compiling data from multiple repositories, duplicated media records are a common issue. These duplicates occur both through data sharing between repositories like Xeno-Canto and GBIF, and when users upload the same file to multiple platforms. To help users efficiently identify these duplicate records, [suwo](https://github.com/maRce10/suwo) provides the find_duplicates() function.
 
-The `find_duplicates()` function helps users identify potential duplicate records in their metadata data frames. Duplicates are identified based on matching species name, country, date, user name, and locality. The function uses a fuzzy matching approach to account for minor variations in the data (e.g., typos, different location formats, etc).The output is a data frame with the candidate duplicate records, allowing users to review and decide which records to keep.
+The [find_duplicates()](https://marce10.github.io/suwo/reference/find_duplicates.html) function helps users identify potential duplicate records in their metadata data frames. Duplicates are identified based on matching species name, country, date, user name, and locality. The function uses a fuzzy matching approach to account for minor variations in the data (e.g., typos, different location formats, etc).The output is a data frame with the candidate duplicate records, allowing users to review and decide which records to keep.
 
 In this example we look for possible duplicates in the merged metadata data frame from the previous section:
 
@@ -464,17 +464,27 @@ dups_merged_metadata <- find_duplicates(merged_metadata)
 head(dups_merged_metadata)
 ```
 
-Note that the `find_duplicates()` function adds a new column called `duplicate_group` to the output data frame. This column assigns a unique identifier to each group of potential duplicates, allowing users to easily identify and review them. For instance, in the example above, records from duplicated group 39 belong to the same user, were recorded on the same date and time in the same country:
+```{r, echo=FALSE}
 
-```{r}
-# look at duplicated group 39
-subset(dups_merged_metadata, duplicate_group == 39)
+boesman_group <- dups_merged_metadata$duplicate_group[dups_merged_metadata$key== 273100]
 
+# Define display function
+display_code <- function(value) {
+  paste0("subset(dups_merged_metadata, duplicate_group == ", value, ")")
+    }
 ```
 
-Also note that the locality is not exactly the same for these records, but the fuzzy matching approach used by `find_duplicates()` was able to identify them as potential duplicates.
+Note that the [find_duplicates()](https://marce10.github.io/suwo/reference/find_duplicates.html) function adds a new column called "duplicate_group" to the output data frame. This column assigns a unique identifier to each group of potential duplicates, allowing users to easily identify and review them. For instance, in the example above, records from duplicated group `r boesman_group` belong to the same user, were recorded on the same date and time and in the same country:
 
-Once users have reviewed the candidate duplicates, they can use the `remove_duplicates()` function to eliminate unwanted duplicates from their metadata data frames. This function takes as input a metadata data frame (either the original or the output of `find_duplicates()`) and a vector of row numbers indicating which records to remove:
+```{r, code = display_code(boesman_group)}
+subset(dups_merged_metadata, duplicate_group == boesman_group)
+```
+
+
+
+Also note that the locality is not exactly the same for these records, but the fuzzy matching approach used by [find_duplicates()](https://marce10.github.io/suwo/reference/find_duplicates.html) was able to identify them as potential duplicates.
+
+Once users have reviewed the candidate duplicates, they can use the [remove_duplicates()](https://marce10.github.io/suwo/reference/remove_duplicates.html) function to eliminate unwanted duplicates from their metadata data frames. This function takes as input a metadata data frame (either the original query results or the output of [find_duplicates()](https://marce10.github.io/suwo/reference/find_duplicates.html)) and a vector of row numbers indicating which records to remove:
 
 
 ```{r}
@@ -493,7 +503,7 @@ When duplicates are found, one observation from each group of duplicates is reta
 
 # Donwload media files
 
-The last step of the workflow is to download the media files associated with the metadata. This can be done using the `download_media()` function, which takes as input a metadata data frame (obtained from any query function or any of the other metadata managing functions) and downloads the media files to a specified directory. For this example we will download images from a query on `Amanita zambiana` (a mushroom) on GBIF:
+The last step of the workflow is to download the media files associated with the metadata. This can be done using the [download_media()](https://marce10.github.io/suwo/reference/download_media.html) function, which takes as input a metadata data frame (obtained from any query function or any of the other metadata managing functions) and downloads the media files to a specified directory. For this example we will download images from a query on `Amanita zambiana` (a mushroom) on GBIF:
 
 ```{r, eval = FALSE}
 # query GBIF for Amanita zambiana images
@@ -542,7 +552,7 @@ for (i in 1:6) {
   title(main = paste(
     amus_files$country[i],
     amus_files$date[i],
-    sep = " \n "
+    sep = "\n"
   ))
 }
 
@@ -568,7 +578,7 @@ amus_files$download_file_name
 
 <!-- add packages used, system details and versions  -->
 
-# Session information {.unnumbered .unlisted}
+## Session information {.unnumbered .unlisted}
 
 <details>
   <summary>Click to see</summary>
