--- a/vignettes/suwo.Rmd
+++ b/vignettes/suwo.Rmd
@@ -450,7 +450,7 @@ head(merged_metadata, 4)
 
 # Find and remove duplicated records
 
-When compiling data from multiple repositories, duplicated media records are a common issue. These duplicates occur both through data sharing between repositories like Xeno-Canto and GBIF, and when users upload the same file to multiple platforms. To help users efficiently identify these duplicate records, [suwo](https://github.com/maRce10/suwo) provides the find_duplicates() function.
+When compiling data from multiple repositories, duplicated media records are a common issue. These duplicates occur both through data sharing between repositories like Xeno-Canto and GBIF, and when users upload the same file to multiple platforms. To help users efficiently identify these duplicate records, [suwo](https://github.com/maRce10/suwo) provides the [find_duplicates()](https://marce10.github.io/suwo/reference/find_duplicates.html)    function.
 
 The [find_duplicates()](https://marce10.github.io/suwo/reference/find_duplicates.html) function helps users identify potential duplicate records in their metadata data frames. Duplicates are identified based on matching species name, country, date, user name, and locality. The function uses a fuzzy matching approach to account for minor variations in the data (e.g., typos, different location formats, etc).The output is a data frame with the candidate duplicate records, allowing users to review and decide which records to keep.
 
@@ -488,7 +488,7 @@ Once users have reviewed the candidate duplicates, they can use the [remove_dupl
 
 
 ```{r}
-# remove duplicates (for illustration we remove the first record of each duplicate group)
+# remove duplicates
 dedup_metadata <- remove_duplicates(dups_merged_metadata)
 ```
 
@@ -499,30 +499,22 @@ The output is a data frame similar to the input but without the specified duplic
 head(dedup_metadata, 4)
 ```
 
-When duplicates are found, one observation from each group of duplicates is retained in the output data frame. However, if multiple observations from the same repository are labeled as duplicates, by default (`same_repo = FALSE`) all of them are retained in the output data frame. This is useful as it can be expected that observations from the same repository are not true duplicates (e.g. different recordings uploaded to Xeno-Canto with the same date, time and location by the same user), but rather have not been documented with enough precision to be told apart. This behavior can be modified. If `same_repo = TRUE`, only one of the duplicated observations from the same repository will be retained in the output data frame. The function will give priority to repositories in which media downloading is more straightforward (i.e. Xeno-Canto and GBIF), but this can be modified with the argument 'repo_priority'.
+When duplicates are found, one observation from each group of duplicates is retained in the output data frame. However, if multiple observations from the same repository are labeled as duplicates, by default (`same_repo = FALSE`) all of them are retained in the output data frame. This is useful as it can be expected that observations from the same repository are not true duplicates (e.g. different recordings uploaded to Xeno-Canto with the same date, time and location by the same user), but rather have not been documented with enough precision to be told apart. This behavior can be modified. If `same_repo = TRUE`, only one of the duplicated observations from the same repository will be retained in the output data frame (and all other excluded). The function will give priority to repositories in which media downloading is more straightforward (i.e. Xeno-Canto, GBIF), but this can be modified with the argument 'repo_priority'.
 
 # Donwload media files
 
 The last step of the workflow is to download the media files associated with the metadata. This can be done using the [download_media()](https://marce10.github.io/suwo/reference/download_media.html) function, which takes as input a metadata data frame (obtained from any query function or any of the other metadata managing functions) and downloads the media files to a specified directory. For this example we will download images from a query on `Amanita zambiana` (a mushroom) on GBIF:
 
-```{r, eval = FALSE}
+```{r, eval = TRUE}
 # query GBIF for Amanita zambiana images
-amus_gbf <- query_gbif(term = "Amanita zambiana", format = "image")
+azam_gbf <- query_gbif(term = "Amanita zambiana", format = "image")
+
+# create folder for images
+out_folder <- file.path(tempdir(), "amanita_zambiana")
+dir.create(out_folder)
 
 # download media files to a temporary directory
-amus_files <- download_media(metadata = amus_gbf, path = tempdir())
-
-```
-
-```{r, eval = TRUE, echo = FALSE}
-
-# query GBIF for Amanita zambiana images
-amus_gbf <- query_gbif(term = "Amanita zambiana", format = "image")
-
-amus_gbf <- subset_metadata(amus_gbf, 1:6)
-
-# download media files to a temporary directory
-amus_files <- download_media(metadata = amus_gbf, path = tempdir())
+azam_files <- download_media(metadata = azam_gbf, path = out_folder)
 
 ```
 
@@ -532,17 +524,24 @@ Here we print the first 3 rows of the output data frame:
 
 ```{r, eval = TRUE}
 
-head(amus_files, 3)
+head(azam_files, 3)
 
 ```
 
-Here we create a 6 panel plot of 6 of the downloaded images (just for illustration purpose):
+... and check that the files were saved in the path supplied:
+```{r, echo=TRUE}
+
+fs::dir_tree(path = out_folder)
+
+```
+
+This is a multipanel plot of 6 of the downloaded images (just for illustration purpose):
 ```{r}
 # create a 6 pannel plot of the downloaded images
 par(mfrow = c(2, 3), mar = c(1, 1, 2, 1))
 
 for (i in 1:6) {
-  img <- jpeg::readJPEG(file.path(tempdir(), amus_files$download_file_name[i]))
+  img <- jpeg::readJPEG(file.path(out_folder, azam_files$download_file_name[i]))
   plot(
     1:2,
     type = 'n',
@@ -550,29 +549,47 @@ for (i in 1:6) {
   )
   rasterImage(img, 1, 1, 2, 2)
   title(main = paste(
-    amus_files$country[i],
-    amus_files$date[i],
+    azam_files$country[i],
+    azam_files$date[i],
     sep = "\n"
   ))
 }
 
 ```
 
+```{r, echo=FALSE}
+unlink(out_folder, recursive = TRUE)
+```
+
 Users can also save the downloaded files into sub-directories with the argument `folder_by`. This argument takes a character of factor column with the names of a metadata field (a column in the metadata data frame) to create sub-directories within the main download directory (suplied with the argument `path`). For instance, the following code saves the previous images into sub-directories by country:
     
 ```{r}
 
-# download media files to a temporary directory, creating sub-directories by country
-amus_files <- download_media(metadata = amus_gbf,
-                             path = tempdir(),
+# create folder for images
+out_folder <- file.path(tempdir(), "amanita_zambiana2")
+dir.create(out_folder)
+
+# download media files creating sub-directories by country
+azam_files <- download_media(metadata = azam_gbf,
+                             path = out_folder,
                              folder_by = "country")
 
+```
+
+```{r, echo=TRUE}
+
+fs::dir_tree(path = out_folder)
+
+```
+
+```{r, echo=FALSE}
+unlink(out_folder, recursive = TRUE)
 ```
 
 In such case the name of the downloaded files will include the sub-directory name:
 ```{r}
 
-amus_files$download_file_name
+azam_files$download_file_name
 
 ```
 
